サンプル用のhtmlを追加

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@ const relativePath = '.';
 <%- include( relativePath + '/assets/include/_header', {pageid,relativePath}); -%>
 <div class="l-wrapper">
   <h1>top</h1>
+  <div class="pg-top-section">
+    文字
+  </div>
   <ul class="p-list">
     <li>My liage</li>
     <li>あいうえお</li>
