--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ const relativePath = '.';
     文字
   </div>
   <ul class="p-list">
-    <li>My liage</li>
+    <li>「My liage」「My liage」「My liage」「My liage」</li>
     <li>あいうえお</li>
     <li>春夏秋冬</li>
   </ul>
