--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@ const relativePath = '.';
     <li>あいうえお</li>
     <li>春夏秋冬</li>
   </ul>
+  <div>
+    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
+    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
+    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
+  </div>
   <div id="app"></div>
   <!-- Slider main container -->
   <div class="swiper-container">
