--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,9 @@ const relativePath = '.';
   </div>
   <div class="p-boxWrep">
     <div class="p-boxMain">
-      <div class="p-box p-box1" data-id="1">
-        <img src='https://placehold.jp/100x300.png?text=1' alt=''>
-      </div>
-      <div class="p-box p-box2" data-id="2">
-        <img src='https://placehold.jp/100x300.png?text=2' alt=''>
-      </div>
-      <div class="p-box p-box3" data-id="3">
-        <img src='https://placehold.jp/100x300.png?text=3' alt=''>
-      </div>
-      <div class="p-box p-box4" data-id="4">
-        <img src='https://placehold.jp/100x300.png?text=4' alt=''>
-      </div>
-      <div class="p-box p-box5" data-id="5">
-        <img src='https://placehold.jp/100x300.png?text=5' alt=''>
-      </div>
+      <% [...new Array(5)].forEach((element,i) => { %>
+        <div class="p-box" data-id="<%- i+1 %>"><%- i+1 %></div>
+      <% }); %>
     </div>
     <div class="p-boxSub">
       <div class="p-boxNav"></div>
