--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,31 @@ const relativePath = '.';
     <li>あいうえお</li>
     <li>春夏秋冬</li>
   </ul>
-  <div>
-    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
-    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
-    <img class="img" src='https://placehold.jp/150x150.png' alt=''>
+
+<h2>picture</h2>
+<picture>
+  <source media="(min-width:1100px)" srcset="/assets/img/a.png">
+  <source media="(max-width:1099px)" srcset="/assets/img/b.png">
+  <img src="/assets/img/a.png" alt="">
+</picture>
+
+  <h2>object-fit</h2>
+  <div class="p-photos">
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+    </div>
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+    </div>
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+    </div>
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+    </div>
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+    </div>
   </div>
   <div id="app"></div>
   <!-- Slider main container -->
@@ -43,6 +64,7 @@ const relativePath = '.';
       <!-- If we need scrollbar -->
       <div class="swiper-scrollbar"></div>
   </div>
+  <h2>Intersection Observer & position sticky</h2>
   <div class="p-boxWrep">
     <div class="p-boxMain">
       <% [...new Array(5)].forEach((element,i) => { %>
@@ -50,7 +72,7 @@ const relativePath = '.';
       <% }); %>
     </div>
     <div class="p-boxSub">
-      <div class="p-boxNav"></div>
+      <div class="p-boxNav is-sticky"></div>
     </div>
   </div>
 
