--- a/src/detail/index.html
+++ b/src/detail/index.html
@@ -1,12 +1,12 @@
 <%
   const page = {
     id: 'detail',
+    class: 'detail',
     title: 'top title',
     description: 'top description',
-    class: 'detail',
     url: '/detail/',
+    ogp: '/assets/img/hoge/ogp.png',
     relativePath: '..',
-    ogp: '/assets/img/hoge/ogp.png'
   }
 %>
 <%- include( page.relativePath + '/assets/include/_head', {page}); -%>
