--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <%
   const page = {
     id: 'top',
+    class: 'top',
     title: 'top title',
     description: 'top description',
-    class: 'top',
     url: '/',
+    ogp: '',
     relativePath: '.',
-    ogp: ''
   }
 %>
 <%- include( page.relativePath + '/assets/include/_head', {page}); -%>
