よく使うモジュールを追加 devDependencies と Dependenciesを整理

--- a/src/detail/index.html
+++ b/src/detail/index.html
@@ -12,7 +12,9 @@
 <%- include( page.relativePath + '/assets/include/_head', {page}); -%>
 <%- include( page.relativePath + '/assets/include/_header', {page}); -%>
 <div class="l-wrapper">
+  <!-- contents start -->
   <h1>detail</h1>
   <p>My page</p>
+  <!-- contents end -->
 </div>
 <%- include( page.relativePath + '/assets/include/_footer',{page}); -%>
