--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
     <video width="300" class="p-kv__video" src="/assets/movie/sample.mp4" poster="" playsinline="" muted="" loop="" autoplay="" preload="auto"></video>
   </div>
   <h1>top</h1>
+
+  <!-- react -->
+  <div id="app"></div>
+  <!--/ react -->
+
   <div class="pg-top-section">
     文字!
   </div>
@@ -51,7 +56,6 @@
       <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
     </div>
   </div>
-  <div id="app"></div>
   <!-- swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
