--- a/src/detail/index.html
+++ b/src/detail/index.html
@@ -11,8 +11,10 @@
 <%- include( relativePath + 'assets/include/_header', {page}); -%>
 <div class="l-wrapper">
   <!-- contents start -->
-  <h1>detail</h1>
-  <p>My page</p>
+  <div class="pg-detail">
+    <h1>detail</h1>
+    <p>My page</p>
+  </div>
   <!-- contents end -->
 </div>
 <%- include( relativePath + 'assets/include/_footer',{page}); -%>
