--- a/src/detail/index.html
+++ b/src/detail/index.html
@@ -14,6 +14,9 @@
   <div class="pg-detail">
     <h1>detail</h1>
     <p>My page</p>
+    <div class="pg-detail__box">
+      <div></div>
+    </div>
   </div>
   <!-- contents end -->
 </div>
