--- a/src/index.html
+++ b/src/index.html
@@ -19,100 +19,14 @@
   <!-- news -->
   <section class="pg-top-section">
     <h2 class="c-title pg-top-section__title">NEWS</h2>
-    <div class="p-list">
-      <article class="p-list__child">
-        <a class="p-list__link" href='/news/detail/'>
-          <div class="p-list__info">
-            <time>2021年4月11日</time>
-            <span>お知らせ</span>
-          </div>
-          <h3 class="p-list__title">
-            ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-          </h3>
-        </a>
-      </article>
-      <article class="p-list__child">
-        <a class="p-list__link" href='/news/detail/'>
-          <div class="p-list__info">
-            <time>2021年4月11日</time>
-            <span>お知らせ</span>
-          </div>
-          <h3 class="p-list__title">
-            ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-          </h3>
-        </a>
-      </article>
-      <article class="p-list__child">
-        <a class="p-list__link" href='/news/detail/'>
-          <div class="p-list__info">
-            <time>2021年4月11日</time>
-            <span>お知らせ</span>
-          </div>
-          <h3 class="p-list__title">
-            ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-          </h3>
-        </a>
-      </article>
-    </div>
+    <%- include( relativePath + 'assets/include/_list', {}); -%>
   </section>
   <!--/ news -->
 
   <!-- blog -->
   <section class="pg-top-section">
     <h2 class="c-title pg-top-section__title">BLOG</h2>
-    <div class="p-card">
-      <article class="p-card__child">
-        <a class="p-card__link" href='/blog/detail/'>
-          <div class="p-card__photo">
-            <img src="/assets/img/_dummy/thumb.png" alt="">
-          </div>
-          <div class="p-card__body">
-            <time class="p-card__time">2021年4月11日</time>
-            <ul class="p-card__tag">
-              <li>#タグ1</li>
-              <li>#タグ2</li>
-            </ul>
-            <h3 class="p-card__title">
-              ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-            </h3>
-          </div>
-        </a>
-      </article>
-      <article class="p-card__child">
-        <a class="p-card__link" href='/blog/detail/'>
-          <div class="p-card__photo">
-            <img src="/assets/img/_dummy/thumb.png" alt="">
-          </div>
-          <div class="p-card__body">
-            <time class="p-card__time">2021年4月11日</time>
-            <ul class="p-card__tag">
-              <li>#タグ1</li>
-              <li>#タグ2</li>
-            </ul>
-            <h3 class="p-card__title">
-              ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-            </h3>
-          </div>
-        </a>
-      </article>
-      <article class="p-card__child">
-        <a class="p-card__link" href='/blog/detail/'>
-          <div class="p-card__photo">
-            <img src="/assets/img/_dummy/thumb.png" alt="">
-          </div>
-          <div class="p-card__body">
-            <time class="p-card__time">2021年4月11日</time>
-            <ul class="p-card__tag">
-              <li>#タグ1</li>
-              <li>#タグ2</li>
-            </ul>
-            <h3 class="p-card__title">
-              ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました ウェブサイトをリニューアルしました
-            </h3>
-          </div>
-        </a>
-      </article>
-    </div>
+    <%- include( relativePath + 'assets/include/_card' , {}); -%>
   </section>
   <!--/ blog -->
 
