--- a/src/index.html
+++ b/src/index.html
@@ -38,27 +38,30 @@
 
 <h2>picture</h2>
 <picture>
-  <source media="(min-width:1100px)" srcset="/assets/img/a.png">
-  <source media="(max-width:1099px)" srcset="/assets/img/b.png">
-  <img src="/assets/img/a.png" alt="">
+  <source media="(min-width:1100px)" srcset="/assets/img/_dummy/x.png">
+  <source media="(max-width:1099px)" srcset="/assets/img/_dummy/y.png">
+  <img src="/assets/img/x.png" alt="">
 </picture>
 
   <h2>object-fit</h2>
   <div class="p-photos">
     <div class="p-photo">
-      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
     </div>
     <div class="p-photo">
-      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
     </div>
     <div class="p-photo">
-      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
     </div>
     <div class="p-photo">
-      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
     </div>
     <div class="p-photo">
-      <img class="is-objectFit-cover" src='/assets/img/free.jpg' alt=''>
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
+    </div>
+    <div class="p-photo">
+      <img class="is-objectFit-cover" src='/assets/img/_dummy/x.png' alt=''>
     </div>
   </div>
   <!-- swiper -->
