dummyファイルの削除タスクを追加 開発モードで任意の環境変数を渡せるように変更 タスク周りのリファクタリング

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- contents start -->
   <!-- kv -->
   <div class="pg-top-kv">
-    <video width="300" class="p-kv__video" src="/assets/movie/sample.mp4" poster="" playsinline="" muted="" loop="" autoplay="" preload="auto"></video>
+    <video width="300" class="p-kv__video" src="/assets/movie/_dummy/sample.mp4" poster="" playsinline="" muted="" loop="" autoplay="" preload="auto"></video>
   </div>
   <!--/ kv  -->
   <!-- news -->
@@ -33,7 +33,6 @@
   <!-- react -->
   <div id="app"></div>
   <!--/ react -->
-
 
 
 <h2>picture</h2>
