--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -44,7 +44,7 @@
       <h2>object-fit</h2>
       <div class="p-photos">
         <div class="p-photo">
-          <img class="is-objectFit-cover" src='/-assets/img/_dummy/x.png' alt=''>
+          <img src='/-assets/img/_dummy/x.png' alt=''>
         </div>
       </div>
       <!--/ object-fit -->
