--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,7 +14,18 @@
     <div class="pg-top">
       <!-- kv -->
       <div class="pg-top-kv">
-        <video width="300" class="p-kv__video" src="/-assets/movie/_dummy/sample.mp4" poster="" playsinline="" muted="" loop="" autoplay="" preload="auto"></video>
+        <video 
+          class="p-kv__video"
+          src="/-assets/movie/_dummy/sample.mp4"
+          width="300"
+          poster="" 
+          playsinline=""
+          muted=""
+          loop=""
+          autoplay=""
+          preload="auto"
+        >
+        </video>
       </div>
       <!--/ kv  -->
       <!-- news -->
